# Brainless-MCP

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/brainless_mcp/: __init__.py  main.py  server.py
src/brainless_mcp/config/: settings.py
src/brainless_mcp/core/: __init__.py  client.py  exceptions.py  guards.py
src/brainless_mcp/tools/: __init__.py  _array.py  _docker.py  _health.py  _live.py  _notification.py  _plugin.py  _setting.py  _system.py  _user.py  _vm.py  unraid.py
tests/: conftest.py  test_array.py  test_docker.py  test_guards.py  test_health.py  test_live.py  test_settings.py  test_vm.py
