[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brainless-mcp"
version = "1.0.0"
description = "Full-control MCP server for Unraid"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.28.1",
    "websockets>=15.0.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.35.0",
    "fastapi>=0.115.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "httpx>=0.28.1",
]

[project.scripts]
brainless-mcp-server = "brainless_mcp.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src/brainless_mcp"]

[tool.hatch.build]
sources = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/brainless_mcp"]
omit = ["tests/*"]
